--- a/MongoMigrationWebApp/Components/MigrationDetails.razor
+++ b/MongoMigrationWebApp/Components/MigrationDetails.razor
@@ -131,7 +131,7 @@
                             <option value="@LogType.Error">Error</option>
                             <option value="@LogType.Warning">Warning</option>
                             <option value="@LogType.Info">Info</option>
-                            <option value="@LogType.Debug">Debug</option>
+                            <option value="@LogType.Verbose">Debug</option>
                             <option value="@LogType.Verbose">Verbose</option>
                         </select>
                     </div>
