--- a/MongoMigrationWebApp/Pages/Index.razor
+++ b/MongoMigrationWebApp/Pages/Index.razor
@@ -138,6 +138,22 @@
         }
     }
 
+    protected override async Task OnInitializedAsync()
+    {
+        // Update WebAppBaseUrl from browser context for Keep-Alive functionality
+        try
+        {
+            var baseUri = NavigationManager.BaseUri;
+            JobManager.UpdateWebAppBaseUrlFromBrowser(baseUri);
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Error updating WebAppBaseUrl: {ex.Message}");
+        }
+
+        await base.OnInitializedAsync();
+    }
+
 #pragma warning disable CS1998
     protected override async Task OnParametersSetAsync()
     {
