--- a/MongoMigrationWebApp/Components/MigrationSettings.razor
+++ b/MongoMigrationWebApp/Components/MigrationSettings.razor
@@ -95,6 +95,10 @@
                         <label for="cs-compareSampleSize" class="form-label">Sample size for hash comparison</label>
                         <input type="number" id="cs-compareSampleSize" class="form-control" @bind="(_configurationBackup ??= new OnlineMongoMigrationProcessor.MigrationSettings()).CompareSampleSize" />
                     </div>
+                    <div class="mb-3">
+                        <label for="log-page-size" class="form-label">Log page size</label>
+                        <input type="text" id="log-page-size" class="form-control" @bind="(_configurationBackup ??= new OnlineMongoMigrationProcessor.MigrationSettings()).LogPageSize" />
+                    </div>
                 </div>
 
                 @if (!string.IsNullOrEmpty(errorMessage))
@@ -182,6 +186,12 @@
     if ((_configurationBackup?.CompareSampleSize ?? 0) < 5 || (_configurationBackup?.CompareSampleSize ?? 0) > 2000)
         {
             errorMessage = "Sample size for hash comparison should be between 5 and 2000.";
+            return;
+        }
+
+    if ((_configurationBackup?.LogPageSize ?? 0) < 1000 || (_configurationBackup?.LogPageSize ?? 0) > 100000)
+        {
+            errorMessage = "Log page size should be between 1000 and 100000.";
             return;
         }
 
