Support for LEGACY_MONGODB_DRIVER , Mongo 3.4

--- a/MongoMigrationWebApp/Components/MigrationDetails.razor
+++ b/MongoMigrationWebApp/Components/MigrationDetails.razor
@@ -43,7 +43,10 @@
                                     <option value="MongoDump and MongoRestore">MongoDump and MongoRestore</option>
                                 }
                                 <option value="MongoDB Driver">MongoDB Driver</option>
-                                <option value="MongoDB Driver (Cosmos DB RU read optimized)">MongoDB Driver (Cosmos DB RU read optimized)</option>
+                                @if (!MigrationJobContext.IsLegacyDriver)
+                                {
+                                    <option value="MongoDB Driver (Cosmos DB RU read optimized)">MongoDB Driver (Cosmos DB RU read optimized)</option>
+                                }
                             </select>
                         </div>
                     }                
@@ -114,9 +117,12 @@
                         <label for="migration-mode" class="form-label" title="Online migration allows live data replication during the process.">
                             Migration Mode
                         </label>                
-                        <select id="migration-mode" value="@SelectedMode"  class="form-select" @onchange="OnModeSelectionChanged" disabled="@(!NewMode)">
+                        <select id="migration-mode" value="@SelectedMode"  class="form-select" @onchange="OnModeSelectionChanged" disabled="@(!NewMode || MigrationJobContext.IsLegacyDriver)">
                             <option value="Offline">Offline</option>
-                            <option value="Online">Online</option>
+                            @if (!MigrationJobContext.IsLegacyDriver)
+                            {
+                                <option value="Online">Online</option>
+                            }
                             <!--<option value="SyncOnly">Sync Only</option>-->
                         </select>
                     </div>
@@ -190,7 +196,8 @@
                                 <input type="number" id="maxInsertionWorkers" class="form-control" @bind="maxInsertionWorkers" min="1" max="16" placeholder="@($"Auto ({defaultInsertionWorkers})")" disabled="@(!NewMode)" />
                             </div>
                         </div>
-                    }                    @if (jobType == JobType.MongoDriver || jobType == JobType.RUOptimizedCopy)
+                    }
+                    @if (jobType == JobType.MongoDriver || jobType == JobType.RUOptimizedCopy)
                     {
                         <div class="row mb-3">
                             <div class="col-md-6">
